@@ -6,13 +6,23 @@ AUX skycat-3.0.2-tk8.5.patch 877 SHA256 6a9048f16a88fca2db57efd2599220508bb28327
 AUX skycat-3.1.2-m4.patch 5106 SHA256 1938684fb0bf581b620797ac49932d457fc4fbd055c99ec86b866b6b20db4efd SHA512 57b2179a31dbed0fb89962933cf280938035fa8f5ddc1015e1c9dd548f54b8579ab84f485330e678173240b75753dea8f86f16958fb56d874316e80558727428 WHIRLPOOL 6e077fdcb4e75511d83bcf764ba3cfb7bd1abdb6ac4fbb48fe90ce24550155a51892d4055066ea1c694168601ed4cdc1cae4bcc07aa256aa7c91e32c7736ce7f
 AUX skycat-3.1.2-makefile-qa.patch 4443 SHA256 59800dcd3c1cf091fbf97f31342c769e93d26a92f7a8892d0d4af06ceae94da5 SHA512 c10193aa675148d7150dbbab888a56c15926054613870b82bd387d6a853e9fb6a44935ead68e194aa1dcab02f9fab498863cc63288864c9571f0de5b6cbb4903 WHIRLPOOL d563fe4ca089bf43085c6a600d0c38635cc55f19f8523945341271e2d5504efe7412a2200833d323707ef617418667f2c5e125d6f266c33401b1016968229d5b
 DIST skycat-3.1.2.tar.gz 3091874 SHA256 559ae26f044601517f8787eadcb93ebda85ebea971f8f961cedefbafb3b9d0ac SHA512 70f7f366c13f0d9914db5be0ed75952a5e97ca2aef18ce5a4aa3e330aeceaaa1ab06c5ada69056659d038b2e558648e1f4033668d4935c6a6c50bce8b766f100 WHIRLPOOL 29408a52256be3cffe06c86d8bc5f1551585f58c27c1c9e77b3f7f0393fd797295028e52410ea4bee4afbd37d2f5a277f3ae56c1c9354ae390a48de508eacded
-EBUILD skycat-3.1.2-r1.ebuild 1487 SHA256 663b782bd5104b57f6bfa4ca4b612ebaa61ec9f64291683265edb86d0593d3eb SHA512 a88d9cbc2740ab0ca1ef919142bf81fb81274c372d9e72816658078b793fc77984f791c493a7c0c05ec1efa327107b72c025b4cf81eb5bc9145c12fb6f22082f WHIRLPOOL 018aac6d43642888dac63cbea77fc785451a25c14be7bb99f59755b1680e13b1309e9fb7f7b23b6d0416d1220f442780b21228f2089d189a4cb4d0dab809a100
-MISC ChangeLog 2949 SHA256 0157892df6f0df93798d85a71f171fbca9d8f70ce9042719441aecbe16743208 SHA512 965059cb31316d60f28b20ef02521d6d32057bf050ef49f523eb0fc80e487619a44be9253fd50a7706e5f5d5fa4cac7dc330dbbe765d7e274627037afa2f1d5e WHIRLPOOL 188bf1350bfe72a84db8f67c68b3d7da7c894b5278e94e8f9a9f84cc818efc3390526f63bf17f67c8ae681a203d810f9662381f6c23e8bae23d6e51df7e6b424
+EBUILD skycat-3.1.2-r1.ebuild 1551 SHA256 a6ec64ac24d861b667fe60da925273f0fa666b7365ac232db8b1ea7343f9fe56 SHA512 9ad91140bd936ce61fcae77ca068cee951b14898b1db3abbe03e4276f464e8334b7f4999f44b0da7f9f1417a2e63b7cceaf0e6a76abc57d40354a83ae1c6bb9a WHIRLPOOL e592abf087e38cc11d60dc1b74b24700dc041f90968e2f8b606431ef95543321e6fbe57174b14f7b32dc9f8a1abbe74f63ff28fa9498d1a7d61fcae233767270
+MISC ChangeLog 3143 SHA256 784e2cad1d9e5ff479bff3c5cb001645074e93bcd75fb4965670dee1d13d5fc5 SHA512 f38ed3f83774df8f4b2ecf7f449419b262f009a518cc5572af98f947fc3c14dc6f65471f73b1464e27ba3a5e3ff4ed6e67ce123afa3b7de65a1876d26e5420aa WHIRLPOOL 514fcc46258df62c4bec5c292ef38aec25d17fc1d932e9eb5a4db53eaa4bf72b1e5a6ea015e007f638b82fde74229daaae48b7d41042cf7877df58df99676c98
 MISC metadata.xml 384 SHA256 6ae66027db624becdd4b62ef75efd7ca501c10286ffdd7bac5173c2bfca9278f SHA512 843ec7883149a8f502903cea58f734964ac814f6aac6115b548761b28e0cadcadd5f4da818e27123451ed3b04731531119781617fdb59d8ba769e08c6500afb3 WHIRLPOOL 2539f783a3a88caf82f85f9e198bbacac169b94337ae5f958453a7f6f3121cec064c69784180ba3bf499b95031c74104083f82a23f87339013bac8d1ce4d429e
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlPn1sgACgkQcaHudmEf86rpkQCggjfDbchYFo+USiIlgxlwC3b3
-GbUAn0McQHD2aaJN42etqvcQYlWK9m02
-=xIyN
+iQIcBAEBCAAGBQJUd3X0AAoJEF0huFKJUZL5WmQQAImFyIwqBa27RhBywrMow/nh
+/vYz1qBlwL7eNgIUHUHwaGvWnXsmyMn8i19qUuCfgatupwc+xSfz+rrrpIrsA0cm
+7QH7yt/kumwG6a8FxHfGTVNxSjKqUvwIoNS4s0Pwl3WRSjQ1AA9E5V/jbemp4p/4
+zwpkipgoElKqta1zNZOSr7LLxfQgMAo5gczgGcshUE2XT4TJcvo7Q5Md9zDa7hep
+sXlUZAgEQvQg2JBlZ6Mp0X23kRcDd60yt36bkYVySNVQqZzJe0KUKzJGvfT26jPB
+0sFGvBmgPHvQG+H5G1YKWwjry58BhHzdtk+6Vgdl3TOq6iL+1ZJjl3eQ960frMff
+mcADxCnrEioPgNXIieauZuwZNLk30B1k8dgGw9OgFrUiPdyWuaM0Sbdvt/421hfD
+mnlHrFz2s3ggJn7YkS4wTZsINblXJdXD4v0RW3Vk6Yk3dgzBnMfjI4kvo9hJmEpF
+0OC5du+FsEYaiDPId6pPKWS51686KMdXzAQh5d/i+OhydGZ9lWRAKMMJvhANtxhZ
+GT7fXlBhZ5c5oGoMr21+WHy2OIdYZO2DQt+Zh24bo6iLiywm8yC2688VGC8wwNi/
+69IdA/I7hN4k3HU3aSTbrxxCAEUDRQ9PoPY//K+3f8mXaU+3rL9vAQzsrWqEqd9W
+7Pr32sI26KOkXpNSbfmb
+=h4eX
 -----END PGP SIGNATURE-----
