@@ -1,6 +1,10 @@
 # ChangeLog for sci-astronomy/skycat
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/skycat/ChangeLog,v 1.13 2014/08/10 20:32:07 slyfox Exp $
+# $Header: /var/cvsroot/gentoo-x86/sci-astronomy/skycat/ChangeLog,v 1.14 2014/11/27 19:05:20 xarthisius Exp $
+
+  27 Nov 2014; Kacper Kowalik <xarthisius@gentoo.org> skycat-3.1.2-r1.ebuild:
+  Append -DUSE_INTERP_RESULT to CPPFLAGS for Tk/Tcl >= 8.6 wrt #514604 by
+  Patrick Lauer <patrick@gentoo.org>
 
   10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> skycat-3.1.2-r1.ebuild:
   QA: drop trailing '.' from DESCRIPTION
